language-bindings/rust/crates/wamr-sys/src/lib.rs

extern "C" {
    #[doc = " Undo wasm_runtime_register_natives or wasm_runtime_register_natives_raw\n\n @param module_name    Should be the same as the corresponding\n                       wasm_runtime_register_natives.\n                       (Same in term of strcmp.)\n\n @param native_symbols Should be the same as the corresponding\n                       wasm_runtime_register_natives.\n                       (Same in term of pointer comparison.)\n\n @return true if success, false otherwise"]
    pub fn wasm_runtime_unregister_natives(
        module_name: *const ::core::ffi::c_char,
        native_symbols: *mut NativeSymbol,
    ) -> bool;
}
extern "C" {
    #[doc = " Get attachment of native function from execution environment\n\n @param exec_env the execution environment to retrieve\n\n @return the attachment of native function"]
    pub fn wasm_runtime_get_function_attachment(
        exec_env: wasm_exec_env_t,
    ) -> *mut ::core::ffi::c_void;
}
extern "C" {
    #[doc = " Set user data to execution environment.\n\n @param exec_env the execution environment\n @param user_data the user data to be set"]
    pub fn wasm_runtime_set_user_data(
        exec_env: wasm_exec_env_t,
        user_data: *mut ::core::ffi::c_void,
    );
}
extern "C" {
    #[doc = " Get the user data within execution environment.\n\n @param exec_env the execution environment\n\n @return the user data (NULL if not set yet)"]
    pub fn wasm_runtime_get_user_data(exec_env: wasm_exec_env_t) -> *mut ::core::ffi::c_void;
}
extern "C" {
    #[doc = " Dump runtime memory consumption, including:\n     Exec env memory consumption\n     WASM module memory consumption\n     WASM module instance memory consumption\n     stack and app heap used info\n\n @param exec_env the execution environment"]
    pub fn wasm_runtime_dump_mem_consumption(exec_env: wasm_exec_env_t);
}
extern "C" {
    #[doc = " Dump runtime performance profiler data of each function\n\n @param module_inst the WASM module instance to profile"]
    pub fn wasm_runtime_dump_perf_profiling(module_inst: wasm_module_inst_t);
}
extern "C" {
    #[doc = " Return total wasm functions' execution time in ms\n\n @param module_inst the WASM module instance to profile"]
    pub fn wasm_runtime_sum_wasm_exec_time(module_inst: wasm_module_inst_t) -> f64;
}
extern "C" {
    #[doc = " Return execution time in ms of a given wasm funciton with\n  func_name. If the function is not found, return 0.\n\n @param module_inst the WASM module instance to profile\n @param func_name could be an export name or a name in the\n                  name section"]
    pub fn wasm_runtime_get_wasm_func_exec_time(
        inst: wasm_module_inst_t,
        func_name: *const ::core::ffi::c_char,
    ) -> f64;
}
pub type wasm_thread_callback_t = ::core::option::Option<
    unsafe extern "C" fn(
        arg1: wasm_exec_env_t,
        arg2: *mut ::core::ffi::c_void,
    ) -> *mut ::core::ffi::c_void,
>;
pub type wasm_thread_t = usize;
extern "C" {
    #[doc = " Set the max thread num per cluster.\n\n @param num maximum thread num"]
    pub fn wasm_runtime_set_max_thread_num(num: u32);
}
extern "C" {
    #[doc = " Spawn a new exec_env, the spawned exec_env\n   can be used in other threads\n\n @param num the original exec_env\n\n @return the spawned exec_env if success, NULL otherwise"]
    pub fn wasm_runtime_spawn_exec_env(exec_env: wasm_exec_env_t) -> wasm_exec_env_t;
}
extern "C" {
    #[doc = " Destroy the spawned exec_env\n\n @param exec_env the spawned exec_env"]
    pub fn wasm_runtime_destroy_spawned_exec_env(exec_env: wasm_exec_env_t);
}
extern "C" {
    #[doc = " Spawn a thread from the given exec_env\n\n @param exec_env the original exec_env\n @param tid thread id to be returned to the caller\n @param callback the callback function provided by the user\n @param arg the arguments passed to the callback\n\n @return 0 if success, -1 otherwise"]
    pub fn wasm_runtime_spawn_thread(
        exec_env: wasm_exec_env_t,
        tid: *mut wasm_thread_t,
        callback: wasm_thread_callback_t,
        arg: *mut ::core::ffi::c_void,
    ) -> i32;
}
extern "C" {
    #[doc = " Wait a spawned thread to terminate\n\n @param tid thread id\n @param retval if not NULL, output the return value of the thread\n\n @return 0 if success, error number otherwise"]
    pub fn wasm_runtime_join_thread(
        tid: wasm_thread_t,
        retval: *mut *mut ::core::ffi::c_void,
    ) -> i32;
}
extern "C" {
    #[doc = " Map external object to an internal externref index: if the index\n   has been created, return it, otherwise create the index.\n\n @param module_inst the WASM module instance that the extern object\n        belongs to\n @param extern_obj the external object to be mapped\n @param p_externref_idx return externref index of the external object\n\n @return true if success, false otherwise"]
    pub fn wasm_externref_obj2ref(
        module_inst: wasm_module_inst_t,
        extern_obj: *mut ::core::ffi::c_void,
        p_externref_idx: *mut u32,
    ) -> bool;
}
extern "C" {
    #[doc = " Delete external object registered by `wasm_externref_obj2ref`.\n\n @param module_inst the WASM module instance that the extern object\n        belongs to\n @param extern_obj the external object to be deleted\n\n @return true if success, false otherwise"]
    pub fn wasm_externref_objdel(
        module_inst: wasm_module_inst_t,
        extern_obj: *mut ::core::ffi::c_void,
    ) -> bool;
}
extern "C" {
    #[doc = " Set cleanup callback to release external object.\n\n @param module_inst the WASM module instance that the extern object\n        belongs to\n @param extern_obj the external object to which to set the\n        `extern_obj_cleanup` cleanup callback.\n @param extern_obj_cleanup a callback to release `extern_obj`\n\n @return true if success, false otherwise"]
    pub fn wasm_externref_set_cleanup(
        module_inst: wasm_module_inst_t,
        extern_obj: *mut ::core::ffi::c_void,
        extern_obj_cleanup: ::core::option::Option<
            unsafe extern "C" fn(arg1: *mut ::core::ffi::c_void),
        >,
    ) -> bool;
}
extern "C" {
    #[doc = " Retrieve the external object from an internal externref index\n\n @param externref_idx the externref index to retrieve\n @param p_extern_obj return the mapped external object of\n        the externref index\n\n @return true if success, false otherwise"]
    pub fn wasm_externref_ref2obj(
        externref_idx: u32,
        p_extern_obj: *mut *mut ::core::ffi::c_void,
    ) -> bool;
}
extern "C" {
    #[doc = " Retain an extern object which is mapped to the internal externref\n   so that the object won't be cleaned during extern object reclaim\n   if it isn't used.\n\n @param externref_idx the externref index of an external object\n        to retain\n @return true if success, false otherwise"]
    pub fn wasm_externref_retain(externref_idx: u32) -> bool;
}
extern "C" {
    #[doc = " Dump the call stack to stdout\n\n @param exec_env the execution environment"]
    pub fn wasm_runtime_dump_call_stack(exec_env: wasm_exec_env_t);
}
extern "C" {
    #[doc = " Get the size required to store the call stack contents, including\n the space for terminating null byte ('\\0')\n\n @param exec_env the execution environment\n\n @return size required to store the contents, 0 means error"]
    pub fn wasm_runtime_get_call_stack_buf_size(exec_env: wasm_exec_env_t) -> u32;
}
extern "C" {
    #[doc = " Dump the call stack to buffer.\n\n @note this function is not thread-safe, please only use this API\n       when the exec_env is not executing\n\n @param exec_env the execution environment\n @param buf buffer to store the dumped content\n @param len length of the buffer\n\n @return bytes dumped to the buffer, including the terminating null\n         byte ('\\0'), 0 means error and data in buf may be invalid"]
    pub fn wasm_runtime_dump_call_stack_to_buf(
        exec_env: wasm_exec_env_t,
        buf: *mut ::core::ffi::c_char,
        len: u32,
    ) -> u32;
}
extern "C" {
    #[doc = " Get the size required to store the LLVM PGO profile data\n\n @param module_inst the WASM module instance\n\n @return size required to store the contents, 0 means error"]
    pub fn wasm_runtime_get_pgo_prof_data_size(module_inst: wasm_module_inst_t) -> u32;
}
extern "C" {
    #[doc = " Dump the LLVM PGO profile data to buffer\n\n @param module_inst the WASM module instance\n @param buf buffer to store the dumped content\n @param len length of the buffer\n\n @return bytes dumped to the buffer, 0 means error and data in buf\n         may be invalid"]
    pub fn wasm_runtime_dump_pgo_prof_data_to_buf(
        module_inst: wasm_module_inst_t,
        buf: *mut ::core::ffi::c_char,
        len: u32,
    ) -> u32;
}
extern "C" {
    #[doc = " Get a custom section by name\n\n @param module_comm the module to find\n @param name name of the custom section\n @param len return the length of the content if found\n\n @return Custom section content (not including the name length\n         and name string) if found, NULL otherwise"]
    pub fn wasm_runtime_get_custom_section(
        module_comm: wasm_module_t,
        name: *const ::core::ffi::c_char,
        len: *mut u32,
    ) -> *const u8;
}
extern "C" {
    #[doc = " Get WAMR semantic version"]
    pub fn wasm_runtime_get_version(major: *mut u32, minor: *mut u32, patch: *mut u32);
}
extern "C" {
    #[doc = " Check whether an import func `(import <module_name> <func_name> (func ...))`\n is linked or not with runtime registered natvie functions"]
    pub fn wasm_runtime_is_import_func_linked(
        module_name: *const ::core::ffi::c_char,
        func_name: *const ::core::ffi::c_char,
    ) -> bool;
}
extern "C" {
    #[doc = " Check whether an import global `(import <module_name> <global_name> (global ...))`\n is linked or not with runtime registered natvie globals"]
    pub fn wasm_runtime_is_import_global_linked(
        module_name: *const ::core::ffi::c_char,
        global_name: *const ::core::ffi::c_char,
    ) -> bool;
}
pub const enlarge_memory_error_reason_t_INTERNAL_ERROR: enlarge_memory_error_reason_t = 0;
pub const enlarge_memory_error_reason_t_MAX_SIZE_REACHED: enlarge_memory_error_reason_t = 1;
pub type enlarge_memory_error_reason_t = ::core::ffi::c_uint;
pub type enlarge_memory_error_callback_t = ::core::option::Option<
    unsafe extern "C" fn(
        inc_page_count: u32,
        current_memory_size: u64,
        memory_index: u32,
        failure_reason: enlarge_memory_error_reason_t,
        instance: wasm_module_inst_t,
        exec_env: wasm_exec_env_t,
        user_data: *mut ::core::ffi::c_void,
    ),
>;
extern "C" {
    #[doc = " Setup callback invoked when memory.grow fails"]
    pub fn wasm_runtime_set_enlarge_mem_error_callback(
        callback: enlarge_memory_error_callback_t,
        user_data: *mut ::core::ffi::c_void,
    );
}
extern "C" {
    pub fn wasm_runtime_create_context_key(
        dtor: ::core::option::Option<
            unsafe extern "C" fn(inst: wasm_module_inst_t, ctx: *mut ::core::ffi::c_void),
        >,
    ) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn wasm_runtime_destroy_context_key(key: *mut ::core::ffi::c_void);
}
extern "C" {
    pub fn wasm_runtime_set_context(
        inst: wasm_module_inst_t,
        key: *mut ::core::ffi::c_void,
        ctx: *mut ::core::ffi::c_void,
    );
}
extern "C" {
    pub fn wasm_runtime_set_context_spread(
        inst: wasm_module_inst_t,
        key: *mut ::core::ffi::c_void,
        ctx: *mut ::core::ffi::c_void,
    );
}
extern "C" {
    pub fn wasm_runtime_get_context(
        inst: wasm_module_inst_t,
        key: *mut ::core::ffi::c_void,
    ) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn wasm_runtime_begin_blocking_op(exec_env: wasm_exec_env_t) -> bool;
}
extern "C" {
    pub fn wasm_runtime_end_blocking_op(exec_env: wasm_exec_env_t);
}
